studio topmonks.com

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -220,10 +220,9 @@
               fill="white"/>
           </svg>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+        <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <h3>01. MEET US</h3>
-          <p>We offer you our friendly feedback on your project and some fine coffee
-            &amp;&nbsp;tea.</p>
+          <p>Get friendly feedback on your project and some fine coffee or&nbsp;tea.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
           <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -247,10 +246,9 @@
             </defs>
           </svg>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
-          <h3>02. PROTOTYPING</h3>
-          <p>We offer you our friendly feedback on your project and some fine coffee
-            &amp;&nbsp;tea.</p>
+        <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+          <h3>02. PROTOTYPE</h3>
+          <p>Have a MVP or product crafted by some skilled tech-monks.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
           <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -260,10 +258,9 @@
               fill="white"/>
           </svg>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+        <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <h3>03. PARTNERSHIP</h3>
-          <p>We offer you our friendly feedback on your project and some fine coffee
-            &amp;&nbsp;tea.</p>
+          <p>We summon your development team or help finding your new&nbsp;CTO.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
           <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -279,11 +276,10 @@
                   stroke-linejoin="round"/>
           </svg>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+        <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <h3>04. GROWTH</h3>
-          <p>Build your development team or find your new CTO with us. Continue to VCs
-            with your market validation and our recommendation for follow up Seed / Round
-            A&nbsp;funding.</p>
+          <p>We support you in growing your businesses, enhancing your skills, providing our network and help raising
+            follow-up rounds.</p>
         </div>
       </div>
     </div>
@@ -293,10 +289,12 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Do you have an idea for the next big thing?</h2>
-          <a href="#contact" class="button_filled">COME PITCH TO US</a>
+        </div>
+          <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <a href="#contact" class="button button_filled">PITCH US</a>
+          </div>
         </div>
       </div>
-    </div>
   </section>
   <section id="portfolio" class="portfolio">
     <div class="mdc-layout-grid tm-layout-wrapper">
