Temporary change of contacts

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -49,18 +49,16 @@
 
         <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
           <p><b>HR aka Happy Makers</b><br>
-            <span itemprop="name">Anna Kovácsová</span>:
-            <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>
-            <!-- <span itemprop="name">Eliška Monsportová</span>:
-            <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>-->
+            <!-- <span itemprop="name">Anna Kovácsová</span>:
+            <a itemprop="telephone" href="tel:+420777556859">+420&nbsp;777&nbsp;556&nbsp;859</a><br>-->
+            <span itemprop="name">Eliška Monsportová</span>:
+            <a itemprop="telephone" href="tel:+420724390424">+420&nbsp;724&nbsp;390&nbsp;424</a><br>
             <a itemprop="email" href="mailto:happy&#64;topmonks.com">happy@​topmonks.com</a></p>
         </div>
 
         <div class="box mdc-layout-grid__cell" itemprop="employee" itemscope
              itemtype="https://schema.org/Person">
           <p><b>Sales</b><br/>
-            <span itemprop="name">Kristýna Sloupová</span>:
-            <a itemprop="telephone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br/>
             <span itemprop="name">Ladislav Gerencséry</span>:
             <a itemprop="telephone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br/>
             <a itemprop="email" href="mailto:sales&#64;topmonks.com">sales@​topmonks.com</a></p>
