blockchain and caffe webs - adding google tag snippets

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -26,19 +26,13 @@
   <meta name="twitter:title" property="og:title" content="Developers for your blockchain idea">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://blockchain.topmonks.com/">
-  <script>(function(w, d, s, l, i) {
-    w[l] = w[l] || [];
-    w[l].push({
-      "gtm.start":
-        new Date().getTime(), event: "gtm.js"
-    });
-    var f = d.getElementsByTagName(s)[0],
-      j = d.createElement(s), dl = l != "dataLayer" ? "&l=" + l : "";
-    j.async = true;
-    j.src =
-      "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-    f.parentNode.insertBefore(j, f);
-  })(window, document, "script", "dataLayer", "GTM-KJBJZ9M");</script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T4KMQ2F');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -617,5 +611,9 @@
     </div>
   </footer>
 </div>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4KMQ2F"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
