--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -42,9 +42,9 @@
     f.parentNode.insertBefore(j, f);
   })(window, document, "script", "dataLayer", "GTM-KJBJZ9M");</script>
 </head>
+{% include 'shared/header.html' %}
 
 <body>
-
 <div class="tm-content-wrapper">
   <main id="main_content" class="main_content">
     <section id="main_info" class="opening">
@@ -188,8 +188,7 @@
         </div>
       </div>
     </section>
-  </main>
-  <section id="mail" class="mail">
+    <section id="mail" class="mail">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -206,6 +205,7 @@
       </div>
     </div>
   </section>
+  </main>
   <section id="pitch_us" class="pitch_us">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
@@ -420,15 +420,12 @@
     </div>
   </section>
   <section id="team" class="team">
-    <div class="mdc-layout-grid tm-layout-wrapper">
+    <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <img src="/images/team.jpg" alt="TopMonks Studio Team">
-        </div>
-        <div class="pink-title mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <div class="pink-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h2>Team</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
         </div>
       </div>
     </div>
