--- a/studio.topmonks.com/src/html/shared/header.html
+++ b/studio.topmonks.com/src/html/shared/header.html
@@ -9,8 +9,17 @@
           <div class="tm-hamburger__bar"></div>
         </div>
       </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
+        <nav id="navigation-left" class="tm-menu tm-menu--horizontal">
+          <ul class="tm-menu__list">
+            <li class=""><a href="/about-us/">Come pitch to us</a></li>
+            <li class=""><a href="/meet-us/">Portfolio</a></li>
+            <li class=""><a href="/contact/">Network</a></li>
+          </ul>
+        </nav>
+      </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet">
+        class="tm-logo-header mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="19px" height="23px" viewBox="0 0 19 23" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-265.000000, -67.000000)">
@@ -23,13 +32,13 @@
           TopMonks
         </a>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
-        <nav id="navigation" class="tm-menu">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
+        <nav id="navigation-right" class="tm-menu tm-menu--horizontal">
           <ul class="tm-menu__list">
-            <li class=""><a href="/about-us/">about us</a></li>
-            <li class=""><a href="/meet-us/">meet us</a></li>
-            <li class=""><a href="/contact/">contacts</a></li>
-            <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
+            <li class=""><a href="/about-us/">Team</a></li>
+            <li class=""><a href="/meet-us/">Blog</a></li>
+            <li class=""><a href="/contact/">About us</a></li>
+            <li class=""><a href="/contact/">Contacts</a></li>
           </ul>
         </nav>
       </div>
