--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -214,7 +214,9 @@
         </div>
       </div>
       <div class="white-box mdc-layout-grid__inner">
-        <div class="box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+        </div>
+        <div class="pitch-box box1 mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -230,7 +232,7 @@
             </div>
           </div>
         </div>
-        <div class="box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="pitch-box box2 mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -260,7 +262,11 @@
             </div>
           </div>
         </div>
-        <div class="box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+        </div>
+        <div class="pitch-box box3 mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -276,7 +282,7 @@
             </div>
           </div>
         </div>
-        <div class="box4 mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="pitch-box box4 mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -300,6 +306,8 @@
                 follow-up rounds.</p>
             </div>
           </div>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
         </div>
       </div>
     </div>
