--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -7,6 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <link rel="preconnect" href="https://ajax.googleapis.com">
+  <link rel="preconnect" href="//cdnjs.cloudflare.com">
+  <link rel="preconnect" href="//use.typekit.net">
+  <link rel="preconnect" href="//cdn.jsdelivr.net">
+  <link rel="preconnect" href="//www.google-analytics.com">
+  <link rel="preconnect" href="//static.hotjar.com">
+  <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" as="script" crossorigin>
+  <link rel="preload" href="https://use.typekit.net/her1ktw.js" as="script">
+  <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <script>WebFontConfig = { typekit: { id: "her1ktw" }, async: true };</script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
           integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
