Studio texts made more business oriented

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -52,7 +52,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1>Developers for your startup</h1>
-            <p>TopMonks Startup Monastery can boost your idea from scratch. We are your tech
+            <p>We provide you with the tech team, you design and sell. We are your tech
               angels &amp; first investors.</p>
           </div>
           <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -228,7 +228,7 @@
             </div>
             <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
               <h3>01. MEET US</h3>
-              <p>Get friendly feedback on your project and some fine coffee or&nbsp;tea.</p>
+              <p>Get a friendly feedback on your project and some fine coffee or&nbsp;tea. We never waste time. If there is a mutual sympathy and a sound business idea, we are ready to discuss the conditions immediately. </p>
             </div>
           </div>
         </div>
@@ -255,7 +255,8 @@
             </div>
             <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
               <h3>02. PROTOTYPE</h3>
-              <p>Have a MVP or product crafted by some skilled tech-monks.</p>
+              <p>Have a minimal viable product (MVP) crafted by our skilled tech-monks in a matter of months.
+              We are ready to pivot as needed in order to acquire the first paying customers.</p>
             </div>
           </div>
         </div>
@@ -274,8 +275,8 @@
               </svg>
             </div>
             <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
-              <h3>03. PARTNERSHIP</h3>
-              <p>We summon your development team or help finding your new&nbsp;CTO.</p>
+              <h3>03. LONG-TERM PARTNERSHIP</h3>
+              <p>Our development team can be acquihired and we can help you to find your new&nbsp;CTO too. Our joint goal is an ultimate success of the startup not a short-time gain.</p>
             </div>
           </div>
         </div>
@@ -298,9 +299,8 @@
             </div>
             <div class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
               <h3>04. GROWTH</h3>
-              <p>We support you in growing your businesses, enhancing your skills, providing our network and help
-                raising
-                follow-up rounds.</p>
+              <p>We support you in growing your business and enhancing your skills. Our business network is at your disposal for help. We may help you with raising
+                follow-up investment rounds too.</p>
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Do you have an idea for the next big thing?</h2>
+          <h2>So what's your idea for the next big thing?</h2>
         </div>
         <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a href="#contact" class="button button_filled">PITCH US</a>
@@ -325,7 +325,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2 class="h2_black">Portfolio</h2>
+          <h2 class="h2_black">Our Portfolio</h2>
         </div>
         <div class="portfolio-logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <img src="/images/logo/pricefx.png" alt="Logo Price(Fx)" height="34" width="137">
@@ -407,8 +407,7 @@
                 when making your next pitch. As our partners, you will get all our support in
                 preparing the pitch deck and networking with the investors. Now it's&nbsp;our mutual
                 interest to help you grow and to raise your funds in the Seed Round or Round A.
-                The same approach to your B2B partners, in case we are familiar with your
-                segment.</p>
+                </p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
             </div>
@@ -530,7 +529,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>References</h2>
+        <h2>Portfolio</h2>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 startups-list">
         <div class="startup"><a href="https://www.purposefly.com/"><img src="/images/logos/purposefly.png"
@@ -698,4 +697,3 @@
 </footer>
 </body>
 </html>
-
