Studio texts made more business oriented

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -52,7 +52,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1>Developers for your startup</h1>
-            <p>We provide you with the tech team, you design and sell. We are your tech
+            <p>We provide you with a complete tech team. Leave the technical part to us and focus on product management and selling. We are your tech
               angels &amp; first investors.</p>
           </div>
           <div class="button button_transparent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
