--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -194,12 +194,12 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <p class="p_center">Subscribe to our mailing list</p>
           </div>
-          <div class="mail_filling mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="mail_filling mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <form>
               <input type="email" name="EMAIL" placeholder="email adress...">
             </form>
           </div>
-          <div class="subscribe mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="subscribe mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <a href="" class="mail-button">SUBSCRIBE</a>
           </div>
         </div>
